<GridLayout
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:columnCount="7"
	android:rowCount="7"
	android:padding="5dp"
	android:visibility="visible">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:id="@+id/textView"
		android:text="@string/ex_lang_label"
		android:layout_gravity="top|center"
		android:layout_column="1"
		android:layout_row="0"/>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_row="1"
		android:layout_column="1"
		android:id="@+id/level_label_id"
		android:layout_gravity="top|center">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/level_label"
			/>

		<TextView
			android:id="@+id/level_space"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/default_level_value"
			/>

	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/ex_lang_instruction_1_label"
		android:id="@+id/textView2"
		android:layout_row="2"
		android:layout_column="1"
		android:layout_gravity="top"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/default_essay_value"
		android:id="@+id/essay_space"
		android:layout_row="3"
		android:layout_column="1"
		android:layout_gravity="top"
		android:padding="20dp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/ex_lang_instruction_2_label"
		android:id="@+id/textView3"
		android:layout_row="4"
		android:layout_column="1"
		android:layout_gravity="top"
		android:singleLine="false"
		android:visibility="visible"/>

	<GridLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_row="5"
		android:layout_column="1"
		android:layout_gravity="top|center"
		android:columnCount="5"
		android:rowCount="2"
		android:padding="20dp">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/default_option_7_value"
			android:id="@+id/button3"
			android:layout_row="1"
			android:layout_column="2"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/default_option_3_value"
			android:id="@+id/button4"
			android:layout_row="0"
			android:layout_column="2"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/default_option_6_value"
			android:id="@+id/button5"
			android:layout_row="1"
			android:layout_column="1"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/default_option_2_value"
			android:id="@+id/button6"
			android:layout_row="0"
			android:layout_column="1"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/default_option_4_value"
			android:id="@+id/button10"
			android:layout_row="0"
			android:layout_column="3"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/default_option_5_value"
			android:id="@+id/button7"
			android:layout_row="1"
			android:layout_column="0"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/default_option_1_value"
			android:id="@+id/button8"
			android:layout_row="0"
			android:layout_column="0"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/default_option_8_value"
			android:id="@+id/button11"
			android:layout_row="1"
			android:layout_column="3"/>

	</GridLayout>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/back_label"
		android:id="@+id/back_button"
		android:layout_row="6"
		android:layout_column="1"
		android:layout_gravity="bottom|center"/>

</GridLayout>