<GridLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@+id/"
	android:rowCount="15"
	android:columnCount="1">


	<!-- Header -->
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/ex_lang_label"
		android:layout_column="0"
		android:layout_columnSpan="1"
		android:layout_gravity="fill_horizontal"
		android:layout_row="0"/>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_column="0"
		android:layout_columnSpan="1"
		android:layout_gravity="fill_horizontal"
		android:layout_row="1">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/level_label"/>

		<TextView
			android:id="@+id/level_space"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/default_level_value"/>

	</LinearLayout>


	<!-- Text to be completed -->
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/ex_lang_instruction_1_label"
		android:layout_column="0"
		android:layout_columnSpan="1"
		android:layout_gravity="fill_horizontal"
		android:layout_row="2"/>

	<TextView
		android:id="@+id/essay_space"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/default_essay_value"
		android:layout_column="0"
		android:layout_columnSpan="1"
		android:layout_gravity="fill_horizontal"
		android:layout_row="3"/>


	<!-- Options for text completion -->
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/ex_lang_instruction_2_label"
		android:layout_column="0"
		android:layout_columnSpan="1"
		android:layout_gravity="fill_horizontal"
		android:layout_row="4"/>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_column="0"
		android:layout_columnSpan="1"
		android:layout_gravity="fill_horizontal"
		android:layout_row="5">

		<Button
			android:id="@+id/option_1_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/default_option_1_value"/>

		<Button
			android:id="@+id/option_2_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/default_option_2_value"/>

		<Button
			android:id="@+id/option_3_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/default_option_3_value"/>

	</LinearLayout>


	<!-- Default options -->
	<Button
		android:id="@+id/back_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/back_label"
		android:layout_column="0"
		android:layout_gravity="fill_horizontal"
		android:layout_row="14"/>

</GridLayout>