<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/activity_window"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="0.15"
		android:layout_gravity="top"
		android:orientation="vertical"
		android:padding="3dp">

		<TextView
			android:id="@+id/titleView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/ex_lang_label"
			android:layout_gravity="top|center"/>

		<LinearLayout
			android:id="@+id/level_label_id"
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="top|start">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:textStyle="bold"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/theme_label"
				/>

			<TextView
				android:id="@+id/themeView"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/theme_sample"
				/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="0.75"
		android:layout_gravity="center"
		android:orientation="vertical"
		android:padding="3dp">

		<ImageView
			android:id="@+id/imageView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:src="@drawable/birthday_cake"/>

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/textView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="start"
				android:padding="20dp"
				android:text="@string/default_essay_value"/>
		</ScrollView>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="0.1"
		android:orientation="horizontal"
		android:layout_gravity="bottom"
		android:padding="3dp">

		<Button
			android:id="@+id/next_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/default_button"
			android:layout_gravity="bottom|end"
			android:text="@string/next_label"
			android:focusable="true"/>
	</LinearLayout>
</LinearLayout>